fix layout bug on smaller screen

--- a/src/main/webapp/resources/sass/addis-drugis.scss
+++ b/src/main/webapp/resources/sass/addis-drugis.scss
@@ -77,6 +77,30 @@ div.row.property-section:last-child {
   margin-bottom: 0;
 }
 
+/* Horizontal Definition Lists */
+dl.horizontal {
+  dt {
+    float: left;
+    width: 160px;
+    text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  dd { 
+    margin-left: 180px;
+  }
+}
+
+dl.horizontal-large {
+  dt {
+    width: 200px;
+  }
+  dd { 
+    margin-left: 220px;
+  }
+}
+
 /////////// end property lists ////////////
 
 //////// Tables ///////////////// 
